Fixed message overflow

--- a/static/main.css
+++ b/static/main.css
@@ -219,9 +219,7 @@ hr {
     border-radius: 0.5rem;
     line-height: 1.75rem;
     margin: 0;
-    overflow-wrap: anywhere;
     padding: 0.75rem 1rem;
-    width: max-content;
 }
 
 .message-message--owner {
